--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
@@ -7,10 +8,11 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
     <div class="site-wrapper">
         <div class="container">
             <header class="main-header">
@@ -22,13 +24,13 @@
                         <ul class="site-navigation">
                             <li class="nav-main-item">
                                 <a class="nav-main-link" href="catalog.html"><span>Каталог</span></a>
-                                    <ul class="navigation-popup"  aria-label="Категории каталога подменю">
-                                        <li class="first-item"><a class="new-item" href="#">Новинки</a></li>
-                                        <li><a href="catalog.html">Сливочное</a></li>
-                                        <li><a href="#">Щербеты</a></li>
-                                        <li><a href="#">Фруктовый лед</a></li>
-                                        <li class="last-item"><a href="#">Мелорин</a></li>
-                                    </ul>
+                                <ul class="navigation-popup" aria-label="Категории каталога подменю">
+                                    <li class="first-item"><a class="new-item" href="#">Новинки</a></li>
+                                    <li><a href="catalog.html">Сливочное</a></li>
+                                    <li><a href="#">Щербеты</a></li>
+                                    <li><a href="#">Фруктовый лед</a></li>
+                                    <li class="last-item"><a href="#">Мелорин</a></li>
+                                </ul>
                             </li>
                             <li class="nav-main-item"><a class="nav-main-link" href="#"><span>Доставка и оплата</span></a></li>
                             <li class="nav-main-item"><a class="nav-main-link" href="#"><span>О Компании</span></a></li>
@@ -41,7 +43,8 @@
                                         <path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z" /></svg>
                                 </button>
                                 <div class="search-wrap">
-                                    <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru" method="get">
+                                    <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru"
+                                        method="get">
                                         <label for="what-search" class="visually-hidden">Что ищем?</label>
                                         <input type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button
                                             class="visually-hidden" type="submit">Найти</button>
@@ -50,28 +53,39 @@
                             </li>
                             <li class="btn-item login-item">
                                 <a class="login-link nav-btn" href="#">Вход
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><g fill="#000"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/>
-                                    <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        width="21" height="19" viewBox="0 0 21 19">
+                                        <g fill="#000">
+                                            <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z" />
+                                            <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z" />
+                                        </g>
+                                    </svg>
                                 </a>
                                 <div class="login-btn-popup-wrap">
-                                    <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru" method="post">
+                                    <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru"
+                                        method="post">
                                         <label for="email" class="visually-hidden">Электронная почта</label>
                                         <input type="email" name="email" id="email" placeholder="Электронная почта">
                                         <label for="pass" class="visually-hidden">Пароль</label>
                                         <input type="password" name="password" id="pass" placeholder="Пароль">
                                         <div class="bottom-row">
-                                        <button class="btn" type="submit">Войти</button>
-                                        <div class="bottom-link-wrap">
-                                        <a href="#">Забыли пароль?</a>
-                                        <a href="#">Новая регистрация</a>
-                                        </div>
+                                            <button class="btn" type="submit">Войти</button>
+                                            <div class="bottom-link-wrap">
+                                                <a href="#">Забыли пароль?</a>
+                                                <a href="#">Новая регистрация</a>
+                                            </div>
                                         </div>
                                     </form>
-                                    </div>
+                                </div>
                             </li>
                             <li class="btn-item empty-basket"><a class="basket-link nav-btn" href="#">Пусто
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><g fill="#FFF">
-                                    <path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
+                                        <g fill="#FFF">
+                                            <path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z" />
+                                            <circle cx="6.984" cy="18" r="2" />
+                                            <circle cx="15.984" cy="18" r="2" />
+                                        </g>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
@@ -184,7 +198,7 @@
                                 сливки и молоко высочайшего качества.
                                 Все дополнительные ингредиенты и добавки произведены из натурального, экологически
                                 чистого сырья.
-                                </li>
+                            </li>
                             <li class="feature-item feature-item-delivery">
                                 Доставка нашего мороженого до заказчиков
                                 осуществляется в специальном термопаке,
@@ -201,12 +215,13 @@
                         <section class="subscribe subscribe-border">
                             <h2 class="visually-hidden">Подписка на рассылку</h2>
                             <div class="subscribe-wrap">
-                            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
-                                что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
-                            </p>
-                            <label for="sub-email" class="visually-hidden">Электронная почта</label>
-                            <input class="sub-field" type="email" name="sub-email" id="sub-email" placeholder="Электронная почта">
-                            <button class="btn btn-subscribe" type="submit">Отправить</button>
+                                <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
+                                    что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно
+                                    =)
+                                </p>
+                                <label for="sub-email" class="visually-hidden">Электронная почта</label>
+                                <input class="sub-field" type="email" name="sub-email" id="sub-email" placeholder="Электронная почта">
+                                <button class="btn btn-subscribe" type="submit">Отправить</button>
                             </div>
                         </section>
                     </div>
@@ -214,7 +229,7 @@
                         <h2 class="visually-hidden">Как нас найти?</h2>
                         <div class="map-block"><img class="map" src="img/map(temp).jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург"
                                 width="1200" height="430">
-                                <img class="map-pin" src="img/svg/pin.svg" width="80" height="140" alt="Указатель в виде мороженого">
+                            <img class="map-pin" src="img/svg/pin.svg" width="80" height="140" alt="Указатель в виде мороженого">
                             <div class="contacts-info">
                                 <p class="our-adress">
                                     <span class="contacts-discription">Адрес главного офиса и офлайн-магазина:</span>
@@ -225,25 +240,25 @@
                                     <a class="contacts-tel" href="tel:+78124502525">8 812 450-25-25</a>
                                     <span class="contacts-discription">(с 10 до 20 ежедневно)</span>
                                 </p>
-                                <a href="#" class="btn">Форма обратной связи</a>
+                                <a href="#" class="btn btn-feed-back">Форма обратной связи</a>
                             </div>
                         </div>
                     </section>
                     <section class="feed-back  feed-back-overlay">
                         <h3 class="visually-hidden">Форма обратной связи</h3>
                         <div class="feed-back-popup">
-                        <form name="feed-back-form" id="back" action="https://echo.htmlacademy.ru" method="post">
-                            <button class="popup-close">Закрыть</button>
-                            <h3>Мы обязательно вам ответим!</h3>
-                            <label for="name" class="visually-hidden">Имя</label>
-                            <input type="text" name="name" id="name" placeholder="Как вас зовут?">
-                            <label for="email-feed-back-id" class="visually-hidden">Ваша почта для ответа</label>
-                            <input type="email" name="email-feed-back" id="email-feed-back-id" placeholder="Ваша почта для ответа">
-                            <label for="text-feed" class="visually-hidden">Поле для сообщения</label>
-                            <textarea name="text-feed-back" id="text-feed" placeholder="Напишите что-нибудь"></textarea>
-                            <button class="btn" type="submit">Отправить</button>
-                        </form>
-                    </div>
+                            <button class="popup-close"><span class="visually-hidden">Закрыть</button>
+                            <h3 class="feed-back-title">Мы обязательно вам ответим!</h3>
+                            <form name="feed-back-form" id="back" action="https://echo.htmlacademy.ru" method="post">
+                                <label for="name" class="visually-hidden">Имя</label>
+                                <input type="text" name="name" id="name" placeholder="Как вас зовут?">
+                                <label for="email-feed-back-id" class="visually-hidden">Ваша почта для ответа?</label>
+                                <input type="email" name="email-feed-back" id="email-feed-back-id" placeholder="Ваша почта для ответа?">
+                                <label for="text-feed" class="visually-hidden">Поле для сообщения</label>
+                                <textarea name="text-feed-back" id="text-feed" placeholder="Напишите что-нибудь"></textarea>
+                                <button class="btn btn-feed-submit" type="submit">Отправить</button>
+                            </form>
+                        </div>
                     </section>
                 </div>
             </main>
@@ -259,7 +274,7 @@
                 <div class="about-us" aria-label="Иная информация о нас">
                     <ul class="about-us-list">
                         <li class="us-item partners"><a href="#">Для поставщиков</a></li>
-                        <li class="us-item" ><a href="#">О производстве</a></li>
+                        <li class="us-item"><a href="#">О производстве</a></li>
                         <li class="us-item"><a href=" #">Наши документы</a></li>
                         <li class="us-item"><a href=" #">Экологические стандарты</a></li>
                     </ul>
@@ -274,6 +289,34 @@
             </footer>
         </div>
     </div>
+    <script>
+        var link = document.querySelector(".btn-feed-back");
+        var popup = document.querySelector(".feed-back-popup");
+        var overlay = document.querySelector(".feed-back-overlay");
+        var close = popup.querySelector(".popup-close");
+        var form = popup.querySelector("form");
+        var namecustomer = popup.querySelector("[name=name]");
+        var email = popup.querySelector("[name= email-feed-back]");
+
+        link.addEventListener("click", function (evt) {
+            evt.preventDefault();
+            popup.classList.add("feed-back-show");
+            overlay.classList.add("feed-back-show");
+            name.focus();
+        });
+
+  close.addEventListener("click", function (evt) {
+    evt.preventDefault();
+    popup.classList.remove("feed-back-show");
+    overlay.classList.remove("feed-back-show");
+  });
+
+  form.addEventListener("submit", function (evt) {
+    evt.preventDefault();
+  });
+
+    </script>
+
 </body>
 
 </html>
