--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
                     </a>
                     <ul class="site-navigation">
                         <li class="nav-main-item">
-                            <a class="nav-main-link active-item " href="catalog.html"><span class="main-link-title">Каталог</span></a>
+                            <a class="nav-main-link active-item " href="catalog.html">Каталог</a>
                             <ul class="navigation-popup" aria-label="Категории каталога подменю">
                                 <li class="popup-item first-item"><a class="new-item" href="#">Новинки</a></li>
                                 <li class="popup-item popup-item-active"><a>Сливочное</a></li>
@@ -28,15 +28,13 @@
                                 <li class="popup-item last-popup-item"><a href="#">Мелорин</a></li>
                             </ul>
                         </li>
-                        <li class="nav-main-item"><a class="nav-main-link" href="#"><span class="main-link-title">Доставка
-                                    и оплата</span></a></li>
-                        <li class="nav-main-item"><a class="nav-main-link" href="#"><span class="main-link-title">О
-                                    Компании</span></a></li>
+                        <li class="nav-main-item"><a class="nav-main-link" href="#">Доставка и оплата </a></li>
+                        <li class="nav-main-item"><a class="nav-main-link" href="#">О Компании</a></li>
                     </ul>
                     <ul class="nav-btn-list">
-                        <li class="btn-item search-item">
+                        <li class="btn-item  base-btn search-item">
                             <button class="search-btn nav-btn"><span class="visually-hidden">Поиск</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                <svg class="symbol-svg"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                     width="17" height="17" viewBox="0 0 17 17">
                                     <path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z" /></svg>
                             </button>
@@ -44,16 +42,16 @@
                                 <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru"
                                     method="get">
                                     <label for="what-search" class="visually-hidden">Что ищем?</label>
-                                    <input class="search-input" type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button
-                                        class="visually-hidden" type="submit">Найти</button>
+                                    <input class="search-input" type="search" name="input-searh" id="what-search"
+                                        placeholder="Что ищем?"><button class="visually-hidden" type="submit">Найти</button>
                                 </form>
                             </div>
                         </li>
-                        <li class="btn-item login-item">
+                        <li class="btn-item  base-btn login-item">
                             <a class="nav-login-link nav-btn" href="#">Вход
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                <svg class="symbol-svg login-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                     width="21" height="19" viewBox="0 0 21 19">
-                                    <g fill="#000">
+                                    <g fill="#ffffff">
                                         <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z" />
                                         <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z" />
                                     </g>
@@ -63,9 +61,11 @@
                                 <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru"
                                     method="post">
                                     <label for="email" class="visually-hidden">Электронная почта</label>
-                                    <input class="login-input" type="email" name="email" id="email" placeholder="Электронная почта" required>
+                                    <input class="login-input" type="email" name="email" id="email" placeholder="Электронная почта"
+                                        required>
                                     <label for="pass" class="visually-hidden">Пароль</label>
-                                    <input class="login-input" type="password" name="password" id="pass" placeholder="Пароль" required>
+                                    <input class="login-input" type="password" name="password" id="pass" placeholder="Пароль"
+                                        required>
                                     <button class="btn btn-login" type="submit">Войти</button>
                                     <div class="bottom-link-wrap">
                                         <a class="login-link" href="#"><span class="login-link-content">Забыли пароль?</span></a>
@@ -74,10 +74,13 @@
                                 </form>
                             </div>
                         </li>
-                        <li class="btn-item" ><a class="nav-btn basket-link basket-not-empty">2 товара
-                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/><circle fill="#343434" cx="6.984" cy="18" r="2"/><circle fill="#343434" cx="15.984" cy="18" r="2"/>
-                                <path fill="#343434" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/></svg>
-                                </a>
+                        <li class="btn-item btn-backet"><a class="nav-btn basket-link basket-not-empty">2 товара
+                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
+                                    <path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z" />
+                                    <circle fill="#343434" cx="6.984" cy="18" r="2" />
+                                    <circle fill="#343434" cx="15.984" cy="18" r="2" />
+                                    <path fill="#343434" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z" /></svg>
+                            </a>
                             <div class="basket-btn-popup">
                                 <table class="basket-table">
                                     <caption class="visually-hidden">Товары в корзине</caption>
@@ -118,9 +121,9 @@
         </header>
     </div>
     <main>
-        <div class="container">
+        <section class="container">
             <ul class="breadcrumbs" aria-label="Дополнительная навигация">
-                <li class="breadcrumbs-item"><a href="index.html" class="breadcrumbs-title">Главная</span></a></li>
+                <li class="breadcrumbs-item"><a href="index.html" class="breadcrumbs-title">Главная</a></li>
                 <li class="breadcrumbs-item"><a href="catalog.html" class="breadcrumbs-title">Каталог</a></li>
                 <li class="breadcrumbs-item breadcrumbs-current">Сливочное</li>
             </ul>
@@ -139,14 +142,7 @@
                             </select>
                         </fieldset>
                         <fieldset class="price-fieldset">
-                            <legend class="legend-price">Цена:
-                                <label class="visually-hidden" id="filter-min-price">от</label>
-                                <input class="filter-price filter-min-price" name="min-price" type="text" id="min-price-field"
-                                    value="100"> руб. –
-                                <label class="visually-hidden" id="filter-max-price">до</label>
-                                <input class="filter-price filter-max-price" name="max-price" type="text" id="max-price-field"
-                                    value="500">руб.
-                            </legend>
+                            <legend class="legend-price">Цена: 100 руб. – 500 руб.</legend>
                             <div class="background-field range-controls">
                                 <div class="range-scale">
                                     <div class="range-bar"></div>
@@ -159,19 +155,18 @@
                             <legend class="legend-fat">Жирность:</legend>
                             <ul class="background-field fat-list">
                                 <li class="fat-option">
-                                    <input class="visually-hidden input-radio" type="radio" name="option-fat" id="fat-0">
+                                    <input class="visually-hidden input-radio" type="radio" name="option-fat" id="fat-0" value="fat0" disabled>
                                     <label for="fat-0">0%</label>
                                 </li>
                                 <li class="fat-option">
-                                    <input class="visually-hidden input-radio" type="radio" name="option-fat" id="fatless-10"
-                                        checked>
+                                    <input class="visually-hidden input-radio" type="radio" name="option-fat" id="fatless-10" value="fat10" checked>
                                     <label for="fatless-10">до 10%</label>
                                 </li>
-                                <li class="fat-option"><input class="visually-hidden input-radio" type="radio" name="option-fat" id="fatless-30">
+                                <li class="fat-option"><input class="visually-hidden input-radio" type="radio" name="option-fat" id="fatless-30" value="fatlless30">
                                     <label for="fatless-30">до 30%</label>
                                 </li>
                                 <li class="fat-option">
-                                    <input class="visually-hidden input-radio" type="radio" name="option-fat" id="fatmore-30">
+                                    <input class="visually-hidden input-radio" type="radio" name="option-fat" id="fatmore-30" value="fatmore30">
                                     <label for="fatmore-30">выше 30%</label>
                                 </li>
                             </ul>
@@ -182,25 +177,26 @@
                             <legend class="legend-fill">Наполнители:</legend>
                             <ul class="background-field filler-list">
                                 <li class="fill-option fill-1">
-                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="choco" checked disabled>
+                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="choco" value="chocolade" checked disabled >
                                     <label for="choco">шоколадные</label>
                                 </li>
                                 <li class="fill-option fill-2">
-                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="filler-sugar" checked>
+                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="filler-sugar" value="sugar" checked>
                                     <label for="filler-sugar">сахарные посыпки</label>
 
                                 </li>
                                 <li class="fill-option fill-3">
-                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="filler-fruit">
+                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler"
+                                        id="filler-fruit">
                                     <label for="filler-fruit">фрукты</label>
                                 </li>
                                 <li class="fill-option fill-4">
-                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="filler-sirup">
+                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="filler-sirup" value="sirup">
                                     <label for="filler-sirup">сиропы</label>
 
                                 </li>
                                 <li class="fill-option fill-5">
-                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler" id="filler-jam" disabled>
+                                    <input class="visually-hidden input-checkbox" type="checkbox" name="option-filler"  id="filler-jam" value="jam" disabled>
                                     <label for="filler-jam">джемы</label>
                                 </li>
                             </ul>
@@ -289,29 +285,30 @@
                         </li>
                     </ul>
                 </div>
-                <section class="pagination-block">
-                <h2 class="visually-hidden">Переключатель страниц</h2>
-                <ul class="pagination-list" aria-label="Страницы">
-                    <li class="pagination-item prev disabled">
-                        <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
-                            <path fill="#ffffffff" d="M7.237 5.642L1.73.132c-.2-.197-.52-.197-.717 0s-.198.52 0 .717L6.163 6l-5.15 5.15c-.2.198-.2.52 0 .717.098.1.228.148.357.148.13 0 .26-.05.358-.148l5.51-5.51c.198-.197.198-.517 0-.715z"/></svg>
-                        <span class="visually-hidden">Назад</span></a>
-                    </li>
-                    <li class="pagination-item pagination-item-current"><a>1</a></li>
-                    <li class="pagination-item"><a href="#">2</a></li>
-                    <li class="pagination-item"><a href="#">3</a></li>
-                    <li class="pagination-item"><a href="#">4</a></li>
-                    <li class="pagination-item"><a href="#">5</a></li>
-                    <li class="pagination-item next">
-                        <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
-                            <path fill="#C1C6CE" d="M7.237 5.642L1.73.132c-.2-.197-.52-.197-.717 0s-.198.52 0 .717L6.163 6l-5.15 5.15c-.2.198-.2.52 0 .717.098.1.228.148.357.148.13 0 .26-.05.358-.148l5.51-5.51c.198-.197.198-.517 0-.715z"/></svg>
-                        <span class="visually-hidden">Вперед</span></a>
-                    </li>
-                </ul>
+                <div class="pagination-block">
+                    <h2 class="visually-hidden">Переключатель страниц</h2>
+                    <ul class="pagination-list" aria-label="Страницы">
+                        <li class="pagination-item prev disabled">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                                    <path fill="#ffffffff" d="M7.237 5.642L1.73.132c-.2-.197-.52-.197-.717 0s-.198.52 0 .717L6.163 6l-5.15 5.15c-.2.198-.2.52 0 .717.098.1.228.148.357.148.13 0 .26-.05.358-.148l5.51-5.51c.198-.197.198-.517 0-.715z" /></svg>
+                                <span class="visually-hidden">Назад</span></a>
+                        </li>
+                        <li class="pagination-item pagination-item-current"><a>1</a></li>
+                        <li class="pagination-item"><a href="#">2</a></li>
+                        <li class="pagination-item"><a href="#">3</a></li>
+                        <li class="pagination-item"><a href="#">4</a></li>
+                        <li class="pagination-item"><a href="#">5</a></li>
+                        <li class="pagination-item next">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                                    <path fill="#C1C6CE" d="M7.237 5.642L1.73.132c-.2-.197-.52-.197-.717 0s-.198.52 0 .717L6.163 6l-5.15 5.15c-.2.198-.2.52 0 .717.098.1.228.148.357.148.13 0 .26-.05.358-.148l5.51-5.51c.198-.197.198-.517 0-.715z" /></svg>
+                                <span class="visually-hidden">Вперед</span></a>
+                        </li>
+                    </ul>
+                </div>
             </section>
-        </div>
+        </section>
     </main>
     <div class="container">
         <footer class="main-footer">
